syntax = "proto3";

option csharp_namespace = "reservation_service";

service GrpcCheckReservations {
	rpc CheckReservations (CheckReservationsRequest) returns (CheckReservationsResponse);
}

message CheckReservationsRequest{
	string Id = 1;
	string StartDate = 2;
	string EndDate = 3;
}

message CheckReservationsResponse {
	bool isFree = 1;
}

service GrpcCheckAccomodations {
	rpc CheckAccomodations (CheckAccomodationsRequest) returns (CheckAccomodationsResponse);
}

message CheckAccomodationsRequest{
	string Id = 1;
	string StartDate = 2;
	string EndDate = 3;
}

message CheckAccomodationsResponse {
	bool isFree = 1;
}
