syntax = "proto3";

option csharp_namespace = "reservation_service";

service GrpcSearch {
	rpc GetAllFreeAccomodations (GetAllRequest) returns (AccomodationResponse);
}

message GetAllRequest {
	string StartDate = 1;
	string EndDate = 2;
}

message AccomodationModel {
	string Id = 1;
}

message AccomodationResponse {
	repeated AccomodationModel accomodation = 1;
}

service GrpcCreate {
	rpc CreateNewAccomodation (CreateRequest) returns (CreateResponse);
	rpc UpdateAccomodation (UpdateRequest) returns (UpdateResponse);
	rpc UpdateAccomodationPrice (UpdatePriceRequest) returns (UpdatePriceResponse);
}

message CreateRequest {
	string Id = 1;
	string Name = 2;
	string Description = 3;
    int32 Price = 4;
    int32 Capacity = 5;
    string Country = 6;
    string City = 7;
    string Street = 8;
    string StreetNumber = 9;
    string AvailableFromDate = 10;
    string AvailableToDate = 11;
}

message CreateResponse{}

message UpdateRequest {
	string Id = 1;
    string AvailableFromDate = 2;
    string AvailableToDate = 3;
}

message UpdateResponse{}

message UpdatePriceRequest {
	string Id = 1;
    int32 Price = 2;
}

message UpdatePriceResponse{}